added color variables

--- a/themes/kotha-child/sass/style.scss
+++ b/themes/kotha-child/sass/style.scss
@@ -6,3 +6,13 @@ Template: kotha
 Version: 1.0.0
 Text Domain: kotha-child
 */
+
+// Colors
+//http://www.colourlovers.com/pattern/2958888/happy_plants by incal: http://www.colourlovers.com/lover/incal/loveNote
+
+$green: #93B891;
+$cream: lighten(#FDE48F,20%);
+$orange: #FEAB1B;
+$red: darken(#EA3232,20%);
+$brown: #2E1414;
+
