add background image

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,3 +16,6 @@ $orange: #FEAB1B;
 $red: darken(#EA3232,20%);
 $brown: #2E1414;
 
+html,body{
+  background: url('images/happy-plants.png') $green;
+}
