--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,8 @@ html,body{
   #primary, #main .post, #main .page{
     background: $cream;
     color: $brown;
-  }  
+  }
+  .primary-sidebar .widget{background:lighten($orange, 10%);}
   a {color: $red; font-weight:bold;}
 }
 
