--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,11 +53,11 @@ html,body{
 
 #header{
   background: $brown;
-  color:$cream;
-  a{color:$cream;}
+  color:darken($orange, 10%);
+  a{color:lighten($orange,16%);}
   .sub-menu{
     background: $brown;
-    a {border-top: 1px solid $orange;}
+    a {border-top: 1px solid darken($orange, 10%);}
   }
 }
 
