--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,6 +57,10 @@ html,body{
   h3{font-size: 1.2em;}
   h2{font-size: 1.4em;}
 
+  hr {
+    margin: 20px 0;
+    border: 1px solid tan;
+  }
 }
 
 #footer{display:none;}
