--- a/style.css
+++ b/style.css
@@ -62,29 +62,35 @@ html hr, body hr {
   border: 1px solid tan;
 }
 
-/* line 66, sass/style.scss */
+/* line 65, sass/style.scss */
+.winner {
+  padding: 6px;
+  background: #93B891;
+}
+
+/* line 69, sass/style.scss */
 #footer {
   display: none;
 }
 
-/* line 68, sass/style.scss */
+/* line 71, sass/style.scss */
 #header {
   background: #2E1414;
   color: #e59201;
 }
-/* line 71, sass/style.scss */
+/* line 74, sass/style.scss */
 #header a {
   color: #fec96c;
 }
-/* line 72, sass/style.scss */
+/* line 75, sass/style.scss */
 #header .sub-menu {
   background: #2E1414;
 }
-/* line 74, sass/style.scss */
+/* line 77, sass/style.scss */
 #header .sub-menu a {
   border-top: 1px solid #e59201;
 }
-/* line 75, sass/style.scss */
+/* line 78, sass/style.scss */
 #header .sub-menu a:hover {
   background: #e59201;
   color: black;
