--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@ Template: kotha
 Version: 1.0.0
 Text Domain: kotha-child
 */
-/* line 20, sass/style.scss */
+/* line 44, sass/style.scss */
 html, body {
   background: url("images/happy-plants.png") #93B891;
   font-size: 100%;
 }
-/* line 23, sass/style.scss */
+/* line 47, sass/style.scss */
 html #primary, html #main .post, html #main .page, body #primary, body #main .post, body #main .page {
   background: #fef0c1;
   color: #2E1414;
 }
-/* line 27, sass/style.scss */
+/* line 51, sass/style.scss */
 html .primary-sidebar .widget, body .primary-sidebar .widget {
   background: #fecd76;
 }
-/* line 28, sass/style.scss */
+/* line 52, sass/style.scss */
 html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   color: #a51111;
   font-weight: bold;
@@ -28,80 +28,80 @@ html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   border: none !important;
   text-decoration: none;
 }
-/* line 35, sass/style.scss */
+/* line 59, sass/style.scss */
 html a:hover, html #main *[id^='readlink']:hover, body a:hover, body #main *[id^='readlink']:hover {
   color: #324c31;
   text-decoration: underline;
 }
-/* line 41, sass/style.scss */
+/* line 65, sass/style.scss */
 html .post h1, html .post h2, html .page h1, html .page h2, body .post h1, body .post h2, body .page h1, body .page h2 {
   color: #1e2d1d;
 }
-/* line 45, sass/style.scss */
+/* line 69, sass/style.scss */
 html .post .entry-header h1, html .post .entry-header h1.entry-title, html .page .entry-header h1, html .page .entry-header h1.entry-title, body .post .entry-header h1, body .post .entry-header h1.entry-title, body .page .entry-header h1, body .page .entry-header h1.entry-title {
-  font-family: "Open Sans", sans-serif;
+  font-family: #e59201;
   text-transform: uppercase;
   text-align: left;
   font-size: 2.2em;
 }
-/* line 56, sass/style.scss */
+/* line 80, sass/style.scss */
 html h4, body h4 {
   font-size: 1em;
 }
-/* line 57, sass/style.scss */
+/* line 81, sass/style.scss */
 html h3, body h3 {
   font-size: 1.2em;
 }
-/* line 58, sass/style.scss */
+/* line 82, sass/style.scss */
 html h2, body h2 {
   font-size: 1.4em;
 }
-/* line 60, sass/style.scss */
+/* line 84, sass/style.scss */
 html hr, body hr {
   margin: 20px 0;
   border: 1px solid tan;
 }
 
-/* line 65, sass/style.scss */
+/* line 89, sass/style.scss */
 .winner {
   padding: 6px;
   background: #93B891;
 }
 
-/* line 69, sass/style.scss */
+/* line 93, sass/style.scss */
 #footer {
   display: none;
 }
 
-/* line 71, sass/style.scss */
+/* line 95, sass/style.scss */
 #header {
   background: #2E1414;
   color: #e59201;
 }
-/* line 74, sass/style.scss */
+/* line 98, sass/style.scss */
 #header a {
   color: #fec96c;
 }
-/* line 75, sass/style.scss */
+/* line 99, sass/style.scss */
 #header .sub-menu {
   background: #2E1414;
 }
-/* line 77, sass/style.scss */
+/* line 101, sass/style.scss */
 #header .sub-menu a {
   border-top: 1px solid #e59201;
 }
-/* line 78, sass/style.scss */
+/* line 102, sass/style.scss */
 #header .sub-menu a:hover {
   background: #e59201;
   color: black;
 }
 
-/* line 85, sass/style.scss */
+/* line 109, sass/style.scss */
 .democracy, .democracy .dem-vote label {
   color: #2E1414;
   font-weight: 500;
 }
-/* line 88, sass/style.scss */
+/* line 112, sass/style.scss */
 .democracy .dem-vote-button input.dem-button, .democracy input.dem-revote-link.dem-revote-button.dem-button, .democracy .dem-vote label .dem-vote-button input.dem-button, .democracy .dem-vote label input.dem-revote-link.dem-revote-button.dem-button {
   background: #a51111;
   color: #fef0c1;
