--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@ Template: kotha
 Version: 1.0.0
 Text Domain: kotha-child
 */
-/* line 46, sass/style.scss */
+/* line 47, sass/style.scss */
 html, body {
   background: #c47a49;
   font-size: 100%;
 }
-/* line 49, sass/style.scss */
+/* line 50, sass/style.scss */
 html #primary, html #main .post, html #main .page, body #primary, body #main .post, body #main .page {
-  background: #f6f5ec;
+  background: #ecebd7;
   color: black;
 }
-/* line 53, sass/style.scss */
+/* line 54, sass/style.scss */
 html .primary-sidebar .widget, body .primary-sidebar .widget {
   background: #9d5d33;
 }
-/* line 54, sass/style.scss */
+/* line 55, sass/style.scss */
 html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   color: #fc0461;
   font-weight: bold;
@@ -28,80 +28,80 @@ html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   border: none !important;
   text-decoration: none;
 }
-/* line 61, sass/style.scss */
+/* line 62, sass/style.scss */
 html a:hover, html #main *[id^='readlink']:hover, body a:hover, body #main *[id^='readlink']:hover {
   color: #c47a49;
   text-decoration: underline;
 }
-/* line 67, sass/style.scss */
+/* line 68, sass/style.scss */
 html .post h1, html .post h2, html .page h1, html .page h2, body .post h1, body .post h2, body .page h1, body .page h2 {
   color: #7e4b29;
 }
-/* line 71, sass/style.scss */
+/* line 72, sass/style.scss */
 html .post .entry-header h1, html .post .entry-header h1.entry-title, html .page .entry-header h1, html .page .entry-header h1.entry-title, body .post .entry-header h1, body .post .entry-header h1.entry-title, body .page .entry-header h1, body .page .entry-header h1.entry-title {
   font-family: #a56235;
   text-transform: uppercase;
   text-align: left;
   font-size: 2.2em;
 }
-/* line 82, sass/style.scss */
+/* line 83, sass/style.scss */
 html h4, body h4 {
   font-size: 1em;
 }
-/* line 83, sass/style.scss */
+/* line 84, sass/style.scss */
 html h3, body h3 {
   font-size: 1.2em;
 }
-/* line 84, sass/style.scss */
+/* line 85, sass/style.scss */
 html h2, body h2 {
   font-size: 1.4em;
 }
-/* line 86, sass/style.scss */
+/* line 87, sass/style.scss */
 html hr, body hr {
   margin: 20px 0;
   border: 1px solid #ddb296;
 }
 
-/* line 91, sass/style.scss */
+/* line 92, sass/style.scss */
 .winner {
   padding: 6px;
   background: #badccc;
 }
 
-/* line 95, sass/style.scss */
+/* line 96, sass/style.scss */
 #footer {
   display: none;
 }
 
-/* line 97, sass/style.scss */
+/* line 98, sass/style.scss */
 #header {
   background: #201302;
-  color: #badccc;
+  color: #cbc892;
 }
-/* line 100, sass/style.scss */
+/* line 101, sass/style.scss */
 #header a {
   color: #fc0461;
 }
-/* line 101, sass/style.scss */
+/* line 102, sass/style.scss */
 #header .sub-menu {
-  background: #3d2304;
+  background: #201302;
 }
-/* line 103, sass/style.scss */
+/* line 104, sass/style.scss */
 #header .sub-menu a {
   border-top: 1px solid #c47a49;
 }
-/* line 104, sass/style.scss */
+/* line 105, sass/style.scss */
 #header .sub-menu a:hover {
   background: #fc0461;
-  color: #badccc;
+  color: black;
 }
 
-/* line 111, sass/style.scss */
+/* line 112, sass/style.scss */
 .democracy, .democracy .dem-vote label {
   color: #3d2304;
   font-weight: 500;
 }
-/* line 114, sass/style.scss */
+/* line 115, sass/style.scss */
 .democracy .dem-vote-button input.dem-button, .democracy input.dem-revote-link.dem-revote-button.dem-button, .democracy .dem-vote label .dem-vote-button input.dem-button, .democracy .dem-vote label input.dem-revote-link.dem-revote-button.dem-button {
   background: #fc0461;
   color: #ecebd7;
