--- a/style.css
+++ b/style.css
@@ -6,21 +6,29 @@ Template: kotha
 Version: 1.0.0
 Text Domain: kotha-child
 */
-/* line 47, sass/style.scss */
+/* line 49, sass/style.scss */
 html, body {
   background: #c47a49;
   font-size: 100%;
 }
-/* line 50, sass/style.scss */
+/* line 52, sass/style.scss */
 html #primary, html #main .post, html #main .page, body #primary, body #main .post, body #main .page {
   background: #ecebd7;
   color: black;
 }
-/* line 54, sass/style.scss */
+/* line 56, sass/style.scss */
 html .primary-sidebar .widget, body .primary-sidebar .widget {
   background: #9d5d33;
 }
-/* line 55, sass/style.scss */
+/* line 58, sass/style.scss */
+html .primary-sidebar .widget h1, body .primary-sidebar .widget h1 {
+  color: #3d2304;
+}
+/* line 59, sass/style.scss */
+html .primary-sidebar .widget a, body .primary-sidebar .widget a {
+  color: #98023a;
+}
+/* line 61, sass/style.scss */
 html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   color: #fc0461;
   font-weight: bold;
@@ -28,81 +36,92 @@ html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   border: none !important;
   text-decoration: none;
 }
-/* line 62, sass/style.scss */
+/* line 68, sass/style.scss */
 html a:hover, html #main *[id^='readlink']:hover, body a:hover, body #main *[id^='readlink']:hover {
   color: #c47a49;
   text-decoration: underline;
 }
-/* line 68, sass/style.scss */
+/* line 74, sass/style.scss */
 html .post h1, html .post h2, html .page h1, html .page h2, body .post h1, body .post h2, body .page h1, body .page h2 {
   color: #7e4b29;
 }
-/* line 72, sass/style.scss */
+/* line 78, sass/style.scss */
 html .post .entry-header h1, html .post .entry-header h1.entry-title, html .page .entry-header h1, html .page .entry-header h1.entry-title, body .post .entry-header h1, body .post .entry-header h1.entry-title, body .page .entry-header h1, body .page .entry-header h1.entry-title {
   font-family: #a56235;
   text-transform: uppercase;
   text-align: left;
   font-size: 2.2em;
 }
-/* line 83, sass/style.scss */
+/* line 89, sass/style.scss */
 html h4, body h4 {
   font-size: 1em;
 }
-/* line 84, sass/style.scss */
+/* line 90, sass/style.scss */
 html h3, body h3 {
   font-size: 1.2em;
 }
-/* line 85, sass/style.scss */
+/* line 91, sass/style.scss */
 html h2, body h2 {
   font-size: 1.4em;
 }
-/* line 87, sass/style.scss */
+/* line 93, sass/style.scss */
 html hr, body hr {
   margin: 20px 0;
   border: 1px solid #ddb296;
 }
 
-/* line 92, sass/style.scss */
+/* line 98, sass/style.scss */
 .winner {
   padding: 6px;
   background: #badccc;
 }
 
-/* line 96, sass/style.scss */
+/* line 102, sass/style.scss */
 #footer {
   display: none;
 }
 
-/* line 98, sass/style.scss */
+/* line 104, sass/style.scss */
 #header {
   background: #201302;
   color: #cbc892;
 }
-/* line 101, sass/style.scss */
+/* line 107, sass/style.scss */
 #header a {
   color: #fc0461;
 }
-/* line 102, sass/style.scss */
+/* line 108, sass/style.scss */
 #header .sub-menu {
   background: #201302;
 }
-/* line 104, sass/style.scss */
+/* line 110, sass/style.scss */
 #header .sub-menu a {
   border-top: 1px solid #c47a49;
 }
-/* line 105, sass/style.scss */
+/* line 111, sass/style.scss */
 #header .sub-menu a:hover {
   background: #fc0461;
   color: black;
 }
 
-/* line 112, sass/style.scss */
+/* line 118, sass/style.scss */
 .democracy, .democracy .dem-vote label {
   color: #3d2304;
   font-weight: 500;
 }
-/* line 115, sass/style.scss */
+/* line 121, sass/style.scss */
 .democracy .dem-vote-button input.dem-button, .democracy input.dem-revote-link.dem-revote-button.dem-button, .democracy .dem-vote label .dem-vote-button input.dem-button, .democracy .dem-vote label input.dem-revote-link.dem-revote-button.dem-button {
   background: #fc0461;
   color: #ecebd7;
+}
+
+/* line 128, sass/style.scss */
+.wppb-user-forms label {
+  font-size: 12px;
+  clear: right;
+}
+/* line 133, sass/style.scss */
+.wppb-user-forms input {
+  width: 140px;
+  float: right;
 }
