--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html .primary-sidebar .widget h1, body .primary-sidebar .widget h1 {
 }
 /* line 59, sass/style.scss */
 html .primary-sidebar .widget a, body .primary-sidebar .widget a {
-  color: #98023a;
+  color: #660127;
 }
 /* line 61, sass/style.scss */
 html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
