--- a/style.css
+++ b/style.css
@@ -6,32 +6,32 @@ Template: kotha
 Version: 1.0.0
 Text Domain: kotha-child
 */
-/* line 54, sass/style.scss */
+/* line 55, sass/style.scss */
 html, body {
   background: #c47a49;
   font-size: 100%;
 }
-/* line 57, sass/style.scss */
+/* line 58, sass/style.scss */
 html #primary, html #main .post, html #main .page, body #primary, body #main .post, body #main .page {
   background: #ecebd7;
   color: black;
 }
-/* line 61, sass/style.scss */
+/* line 62, sass/style.scss */
 html .primary-sidebar .widget, body .primary-sidebar .widget {
   background: #9d5d33;
   color: black;
 }
-/* line 63, sass/style.scss */
+/* line 64, sass/style.scss */
 html .primary-sidebar .widget h1, body .primary-sidebar .widget h1 {
   color: #102119;
   padding: 0;
   margin: 0 0 20px 0;
 }
-/* line 64, sass/style.scss */
+/* line 65, sass/style.scss */
 html .primary-sidebar .widget a, body .primary-sidebar .widget a {
   color: #660127;
 }
-/* line 67, sass/style.scss */
+/* line 68, sass/style.scss */
 html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   color: #fc0461;
   font-weight: bold;
@@ -39,107 +39,115 @@ html a, html #main *[id^='readlink'], body a, body #main *[id^='readlink'] {
   border: none !important;
   text-decoration: none;
 }
-/* line 74, sass/style.scss */
+/* line 75, sass/style.scss */
 html a:hover, html #main *[id^='readlink']:hover, body a:hover, body #main *[id^='readlink']:hover {
   color: #c47a49;
   text-decoration: underline;
 }
-/* line 80, sass/style.scss */
+/* line 81, sass/style.scss */
 html .post h1, html .post h2, html .page h1, html .page h2, body .post h1, body .post h2, body .page h1, body .page h2 {
   color: #7e4b29;
 }
-/* line 84, sass/style.scss */
+/* line 85, sass/style.scss */
 html .post .entry-header h1, html .post .entry-header h1.entry-title, html .page .entry-header h1, html .page .entry-header h1.entry-title, body .post .entry-header h1, body .post .entry-header h1.entry-title, body .page .entry-header h1, body .page .entry-header h1.entry-title {
   font-family: #a56235;
   text-transform: uppercase;
   text-align: left;
   font-size: 2.2em;
 }
-/* line 97, sass/style.scss */
+/* line 98, sass/style.scss */
 html h4, body h4 {
   font-size: 1em;
 }
-/* line 98, sass/style.scss */
+/* line 99, sass/style.scss */
 html h3, body h3 {
   font-size: 1.2em;
 }
-/* line 99, sass/style.scss */
+/* line 100, sass/style.scss */
 html h2, body h2 {
   font-size: 1.4em;
 }
-/* line 101, sass/style.scss */
+/* line 102, sass/style.scss */
 html hr, body hr {
   margin: 20px 0;
   border: 1px solid #ddb296;
 }
 
-/* line 110, sass/style.scss */
+/* line 111, sass/style.scss */
 .winner {
   padding: 6px;
   background: #badccc;
 }
 
-/* line 114, sass/style.scss */
+/* line 115, sass/style.scss */
 #footer {
   display: none;
 }
 
-/* line 116, sass/style.scss */
+/* line 117, sass/style.scss */
 #header {
   background: #201302;
   color: #cbc892;
 }
-/* line 119, sass/style.scss */
+/* line 120, sass/style.scss */
 #header a {
   color: #fc0461;
 }
-/* line 120, sass/style.scss */
+/* line 121, sass/style.scss */
 #header #menu-main {
   background: #201302;
 }
-/* line 121, sass/style.scss */
+/* line 122, sass/style.scss */
 #header .sub-menu {
   background: #201302;
 }
-/* line 123, sass/style.scss */
+/* line 124, sass/style.scss */
 #header .sub-menu a {
   border-top: 1px solid #c47a49;
 }
-/* line 124, sass/style.scss */
+/* line 125, sass/style.scss */
 #header .sub-menu a:hover {
   background: #fc0461;
   color: black;
 }
 
-/* line 131, sass/style.scss */
-.democracy, .democracy .dem-vote label {
+/* line 132, sass/style.scss */
+.democracy, .democracy .dem-vote {
   color: #3d2304;
   font-weight: 500;
 }
-/* line 134, sass/style.scss */
-.democracy .dem-vote-button input.dem-button, .democracy input.dem-revote-link.dem-revote-button.dem-button, .democracy .dem-vote label .dem-vote-button input.dem-button, .democracy .dem-vote label input.dem-revote-link.dem-revote-button.dem-button {
-  background: #fc0461;
+/* line 136, sass/style.scss */
+.democracy .dem-vote-button input.dem-button, .democracy input.dem-revote-link.dem-revote-button.dem-button, .democracy .dem-vote .dem-vote-button input.dem-button, .democracy .dem-vote input.dem-revote-link.dem-revote-button.dem-button {
+  background: #98023a;
   color: #ecebd7;
 }
+/* line 140, sass/style.scss */
+.democracy label, .democracy .dem-label, .democracy .dem-vote label, .democracy .dem-vote .dem-label {
+  color: #102119;
+}
+/* line 143, sass/style.scss */
+.democracy .dem-poll-info div, .democracy .dem-vote .dem-poll-info div {
+  color: black;
+}
 
-/* line 141, sass/style.scss */
+/* line 149, sass/style.scss */
 .wppb-user-forms input {
   width: 140px;
   float: right;
 }
 
-/* line 150, sass/style.scss */
+/* line 158, sass/style.scss */
 .page .entry-content .wpforms-container button.wpforms-submit {
   background: #76ba9a;
   color: #3d2304;
   font-weight: bold;
 }
-/* line 156, sass/style.scss */
+/* line 164, sass/style.scss */
 .page .entry-content .wpforms-container div[class*="wpforms-confirmation-container"] {
   background: #76ba9a;
   color: #3d2304;
 }
-/* line 162, sass/style.scss */
+/* line 170, sass/style.scss */
 .page .entry-content .wpforms-container .hide-form-field {
   display: none;
 }
